k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ertriage-app
  namespace: ertriage
  labels:
    app: ertriage-app
spec:
  selector:
    app: ertriage-app
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  type: ClusterIP
